# toys

./: .gitignore  .travis.yml  README.md  cabal.project  compute.cpp  de-bruijn.rkt
.trash/AoC2019/: P1A.hs
.trash/blog_os/: Cargo.toml  ch2-minimal-kernel.org  ch3-vga-text-mode.org  x86_64-blog_os.json
.trash/blog_os/src/: gdt.rs  main.rs
.trash/compiler/: README.md  package.yaml  stack.yaml
.trash/compiler/src/: Lexer.hs  Parser.hs
.trash/debugger/: jargon  makefile  work.c
.trash/debugger/somedb/: Cargo.toml
.trash/dice/: Cargo.toml
.trash/dice/src/: main_window.rs  mainwindow.ui
.trash/fs/: makefile
.trash/haskell/: Alternative.hs  ArrowAndApplicative.hs  Boolean.hs  Calculator.hs  Combinations.hs  Concurrent.hs  ContMonad2.hs  Continuation.hs  Derangements.hs  Exception.hs  Functor.hs  GNFData.hs  Ham.hs  Huffman.hs  Id.hs  Instance.hs  Kind.hs  Layout.hs  LogicCalculator.hs  MR.hs  Matrix.hs  MonadBase.hs  MonadMore.hs  ParaListComp.hs  Person.hs  PingPong.hs  PrimeNumbers.hs  RPN.hs  Random.hs  Rank.hs  RecordFields.hs  RecordsPrototype.hs  Recursive.hs  Remote.hs  Rome.hs  ST.hs  SYB.hs  SafeEval.hs  Set.hs  SetSum.hs  (+9 more)
.trash/haskell/algeff/: Eff.hs  README.md  algeff.cabal  stack.yaml
.trash/haskell/binary/: ChangeLog.md  binary-demo.cabal  package.yaml
.trash/haskell/calculator/: Calculator.hs
.trash/haskell/lenses-demo/: package.yaml
.trash/haskell/macro/: ChangeLog.md  package.yaml
.trash/haskell/pong/: pong.cabal
.trash/haskell/quoter/: .gitignore
.trash/haskell/zipper/: .gitignore  ChangeLog.md
.trash/order/: ChangeLog.md
.trash/order/src/: Lib.hs
.trash/peval/: .gitignore  README.md  package.yaml
AoC2019/: P1B.hs
algo/: 1d_search.cpp
apple/: CMakeLists.txt  Makefile  ocr.mm
apple/animation/: CMakeLists.txt  animation.m
apple/ocr/: CMakeLists.txt  ocr.mm
badapple/: CHANGELOG.md  badapple.cabal
badapple/app/: Main.hs
baojiang-hs/: CHANGELOG.md
baojiang-hs/app/: Main.hs
baojiang-rs/: Cargo.toml
baojiang-rs/src/: main.rs
baojiang/baojiang-hs/: baojiang.cabal
blog_os/: Cargo.toml  ch1-freestanding.org
blog_os/src/: lib.rs  serial.rs  vga_buffer.rs
c1/: Cargo.toml
c1/src/: c1.pest  main.rs
c1/test/: simple.c1
cairo/: .gitignore  Makefile  blur.c  consumer.c  fast_gaussian_blur.c  opencv_baseline.cpp  provider.cc  readme.org
codewars/: AlgebraicIsomorphism.hs  Isomorphism.hs
codewars/Haskell/: PeanoAndChurch.hs
codewars/Rust/: SimpleInteractiveInterpreter.rs  SymbolicDifferentiationOfPrefixExpressions.rs  TinyThreePassCompiler.rs
compiler/app/: Main.hs
compiler/src/: Syntax.hs
cpp/coroutine-botoid/: CMakeLists.txt  botoid.cpp  botoid.hpp  main.cpp  readme.md
cvc5/: separation_logic.smt2  seq.smt2
danbooru/: CHANGELOG.md  README.md  danbooru.cabal
danbooru/app/: Main.hs  reference.py
debugger/: hello.asm  makefile
dice/src/: main.rs  rolls.rs  state.rs
fa/: Cargo.toml
fa/src/: main.rs
fs/: hello.c  readme
haskell/: Alga.hs  Applicative.hs  Arrow.hs  ArrowAndMonad.hs  ArrowProfunctorMonoid.hs  BFS.hs  BinarySearch.hs  BinaryTest.hs  Caesar.hs  Catalan.hs  Category.hs  Comonad.hs  Conduit.hs  Constant.hs  ContMonad1.hs  Continuation.hs  DTALC.hs  DeriveTopdown.hs  Dining.hs  Dynamic.hs  ETALC.hs  EightQueens.hs  Falg.hs  Fib.hs  FoldableTest.hs  Free.hs  FreeMonad1.hs  FreeMonad2.hs  FreeMonad3.hs  Generic0.hs  Generic1.hs  GenericPretty.hs  Hanoi.hs  IO.hs  ImplicitParams.hs  Interview.hs  IsoProperty.hs  Iteratee1.hs  Kind.hs  LabelTree.hs  (+42 more)
haskell/binary/: .gitignore
haskell/compiler/: Compiler.hs  Parser.hs
haskell/lenses-demo/: .gitignore  ChangeLog.md  README.md
haskell/macro/: .gitignore
haskell/pong/: package.yaml
haskell/provider/: .gitignore  ChangeLog.md  package.yaml
haskell/quoter/: ChangeLog.md  README.md  package.yaml
haskell/testing/: .gitignore  ChangeLog.md  package.yaml
haskell/zipper/: package.yaml
haskells/: Millionaire.hs  MyLens.hs  MyPrelude.hs  MyServer.hs  haskell.cabal
idris/: Average.idr  Hello.idr
imetools/: 986wb.txt  986wb_full.txt  98wb.txt  98wbU.dict.yaml  98wb_full.txt  Cangjie5.txt  NewTimeA.dict.yaml  NewTimeB.dict.yaml  NewTimeS.dict.yaml  a  blend.py  bsep.py  charfreq.csv  charfreq_result.csv  charscomp.py  charset.py  citigen.py  common.py  common_simp.txt  common_trad.txt  convert.py  dupstat.py  dupstat.xlsx  gb1-trad.txt  gb2-trad.txt  huffman.py  newwb.txt  newwb_full.txt  onlyfull.py  preprocess.py  sentence.py  smzm.txt  sougou.py  srm.dict.yaml  table.py  tiger.txt  tiger_full.txt  tigerproc.py  tub10000.txt  wb06.txt  (+10 more)
introtcs/intro/: karatsuba.cc
l/src/: main.rs  slogic.rs
lf/: Cargo.toml
lf/src/: stack.rs
lockfree/src/: main.rs
logic/: Cargo.toml
memory/: MCSPlusCal-Deadlock.tla  Makefile  mcs.cpp  rcu.cpp  rcu.ll  rcu.s  testSC.cpp
mma-keygen/: Main.hs  mma-keygen.cabal  reference.js
order/: .gitignore  package.yaml
peval/: ChangeLog.md
peval/src/: Interpreter.hs
qlearn/: maze.py
racket/: Equation.rkt  de-bruijn.rkt  dt1.rkt  dt2.rkt  dt3.rkt  peval.rkt
raytracer/: Main.hs  Steps.hs  raytracer.cabal
rml/: Cargo.toml  README.md
rust/: Cargo.toml
rust/src/: base64.rs  btree.rs  fib.rs  fp.rs  lib.rs  main.rs  pratt.rs  pratt_dijkstra.rs  type.rs
telegram/: .gitignore  angryskyzh.py  angryskyzh.txt  deleter.py  findchatid.py  logger.py  looklookbook.py  merge.sh  trivial_telegramer.py
telegram/chinputbot/: chinputbot.py
telegram/looklookbook/: .looklookbook.csv  COPYING  card_template.html  imggen.py  looklookbook.py  persistent_dict.py
telegram/televery/: .gitignore
televery/: Cargo.toml  README.md  config.sample.yml
televery/src/: main.rs  server.rs
templates/: main.cpp
vala/: HelloWorld.vala
webbench-rs/: Cargo.toml  README.md
webbench-rs/src/: main.rs
websocketd/: Cargo.toml  README.md  client.py  echo.py
websocketd/src/: frames.rs  handshake.rs  main.rs  messages.rs  server.rs  stream.rs  streams.rs
websocketd/utils/: client.py  echo.c  inc.c
z3/: a.py  gen_magic.py
zig/ffmpeg/: build.zig  main.zig
zig/templater/: build.zig  main.zig
(+28 files in other folders)
