cabal-version:      2.4
name:               badapple
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ksqsf
maintainer:         ksqsf@mail.ustc.edu.cn

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable badapple
    main-is:          Main.hs

    default-extensions:
        LambdaCase
        NumericUnderscores
        MultiWayIf

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , JuicyPixels
                    , ffmpeg-light
                    , vector
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010
