[package]
name = "blog_os"
version = "0.1.0"
authors = ["_rika <i@ksqsf.moe>"]

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"
uart_16550 = "0.1.0"
x86_64 = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"

[dev-dependencies]
array-init = "0.0.3"
