cabal-version:      2.4
name:               danbooru
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ksqsf
maintainer:         ksqsf@mail.ustc.edu.cn

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable danbooru
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    async, base ^>=4.15.0.0, bytestring >= 0.10.12.1, http-client >= 0.7.8, http-client-tls >= 0.3.5.3, http-conduit, http-types >= 0.12.3, regex-compat, scalpel, monad-parallel
    hs-source-dirs:   app
    default-language: Haskell2010
