cabal-version:      2.4
name:               danbooru
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ksqsf
maintainer:         ksqsf@mail.ustc.edu.cn

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable danbooru
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.0.0 && <5, bytestring, conduit, conduit-extra, exceptions >= 0.10.4, extra >= 1.7.9, http-conduit, regex-compat, resourcet, scalpel, scheduler
    hs-source-dirs:   app
    default-language: Haskell2010
