cabal-version:      2.4
name:               mma-keygen
version:            0.1.0.0

executable mma-keygen
    main-is:          Main.hs
    default-extensions:
      ApplicativeDo
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      PartialTypeSignatures
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
    build-depends:    base
                    , bytestring
                    , random
    default-language: Haskell2010
