[package]
authors = ["_rika <i@ksqsf.moe>"]
name = "televery"
version = "0.1.0"
[dependencies]
bytes = "0.4.9"
clap = "2.32"
failure = "0.1.1"
futures = "0.1.23"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
telegram-bot = "0.6.1"
tokio-io = "0.1"
tokio-core = "0.1.17"
tokio-codec = "0.1.0"
log = "0.4.3"
env_logger = "0.5.12"
